--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Gaensh this is my first web app program.
         </div>
+        <script>
+            alert(Hi, I\'m' javascript')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
